<resources>
    <string name="app_name">Personbooks</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_price">PriceActivity</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="title_activity_rent_edit">RentEditActivity</string>
    <string name="sub_elecAndwater">Water/Elec Price</string>
    <string name="subtitle_water">Water</string>
    <string name="subtitle_elec">Elec</string>
    <string name="subtitle_rent">Rent</string>
    <string name="subtitle_net">NetCost</string>
    <string name="commit">Commit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="perDialogtitle">Set per elec and water</string>
    <string name="hint_perElec">electricity price</string>
    <string name="hint_perwater">per of water</string>
    <string name="showper">show per</string>
    <string name="current_per">show the current per</string>
    <string name="Consume_water">consume water</string>
    <string name="consume_elec">consume elec</string>
    <string name="cur_rent">current rent</string>
    <string name="mornning">morning</string>
    <string name="noon">noon</string>
    <string name="evening">evening</string>
    <string name="showField_rent">The current rent[elec, water, net]:%1$.2f</string>
    <string name="showfield_detail">rent:%1$.1f\n%2$s cost %3$d elec, %4$d ton of water,\nelec outlay%5$.1f，and water %6$.1f.\nothers the net cost %7$.0f</string>
    <string name="show_per">per elec:%1$.2f, per water:%2$.2f</string>
</resources>
